RESOLVED FIXED235522
[Forms] Fix input type email visible value update
https://bugs.webkit.org/show_bug.cgi?id=235522
Summary [Forms] Fix input type email visible value update
zsun
Reported 2022-01-24 08:48:49 PST
Affect test imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/email-set-value.html
Attachments
Patch (1.59 KB, patch)
2022-01-24 08:53 PST, zsun
no flags
Patch (3.62 KB, patch)
2022-05-17 02:36 PDT, zsun
no flags
Patch (2.74 KB, patch)
2022-05-19 01:56 PDT, zsun
no flags
zsun
Comment 1 2022-01-24 08:53:07 PST
zsun
Comment 2 2022-01-24 08:53:56 PST
Not ready for review yet.
Radar WebKit Bug Importer
Comment 3 2022-01-31 09:38:43 PST
zsun
Comment 4 2022-05-17 02:36:24 PDT
Chris Dumez
Comment 5 2022-05-17 07:57:35 PDT
Comment on attachment 459493 [details] Patch r=me
Tim Nguyen (:ntim)
Comment 6 2022-05-18 01:16:43 PDT
Comment on attachment 459493 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=459493&action=review > Source/WebCore/html/TextFieldInputType.cpp:146 > + bool needTextUpdate = valueChanged || (eventBehavior == TextFieldEventBehavior::DispatchNoEvent && sanitizedValue != element()->innerTextValue()); > + if (needTextUpdate) grammar nit: needsTextUpdate
zsun
Comment 7 2022-05-19 01:56:38 PDT
EWS
Comment 8 2022-05-19 04:42:49 PDT
Committed r294476 (250735@main): <https://commits.webkit.org/250735@main> Reviewed commits have been landed. Closing PR #774 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.