Fix input type email visible value update.

This is an import of Chromium CL at
https://chromium-review.googlesource.com/c/chromium/src/+/3299014
For email type, when the visible value is different from the sanitized value, we need to update it.

https://bugs.webkit.org/show_bug.cgi?id=235522

Reviewed by Chris Dumez.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/email-set-value-expected.txt:
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::setValue):

Canonical link: https://commits.webkit.org/250735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294476 268f45cc-cd09-0410-ab3c-d52691b4dbfc